Unify action bar order and fix overlap

--- a/matrix-effects.css
+++ b/matrix-effects.css
@@ -46,7 +46,7 @@ main::before,
 }
 
 main > *,
-.content > *{
+.content > :not(.search-shell):not(.music-shell):not(.home-only){
   position: relative;
   z-index: 1;
 }
